# Akmil

./: README.md
QuranSpotTest/: .gitignore  README.md
QuranSpotTest/backend/: pyproject.toml  railway.toml
QuranSpotTest/backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
QuranSpotTest/backend/app/routes/: auth_routes.py  coverage_routes.py  dev_routes.py  leaderboard_routes.py  match_routes.py  quran_routes.py  ratings_routes.py  score_routes.py  solo_routes.py  ws_routes.py
QuranSpotTest/backend/app/services/: audio_pipeline.py  elo.py  invite_registry.py  match_engine.py  matchmaker.py  normalizer.py  quran_api_client.py  quran_foundation_api.py  quran_service.py  rate_limiter.py  scorer.py  similarity_service.py  tiers.py  whisper_service.py
QuranSpotTest/backend/app/ws/: connection_manager.py
QuranSpotTest/backend/data/: quran.sqlite
QuranSpotTest/backend/scripts/: build_quran_db.py  convert_tarteel_model.py
QuranSpotTest/backend/tests/: test_elo.py  test_matchmaker.py  test_normalizer.py  test_quran_service.py  test_scorer.py  test_tiers.py
QuranSpotTest/data/: similarity.json
QuranSpotTest/frontend/: capacitor.config.ts  package-lock.json  package.json
QuranSpotTest/frontend/public/: index.html
QuranSpotTest/frontend/src/app/: globals.css  layout.tsx  page.tsx
QuranSpotTest/frontend/src/components/: AkmilLogo.tsx  Avatar.tsx  JuzPicker.tsx  NavBar.tsx  QuranPageViewer.tsx  Recorder.tsx  SurahPicker.tsx
QuranSpotTest/frontend/src/lib/: api.ts  live_audio.ts  prefs.ts  types.ts  ws.ts
(+8 files in other folders)
